# ipm

./: .gitignore  CMakeLists.txt  README.md
include/ipm/: ipm_common.h  ipm_error.h  ipm_memory.h
source/: internal.h  ipm_common.c  ipm_error.c  ipm_memory.c  ipm_memory_internal.h  ipm_platform.c  ipm_platform.h  memory_claim.c  memory_claim.h  shared_memory.c  shared_memory.h
tests/: fork_test.c  single_test.c  test_common.c  test_common.h
